--- a/app/src/main/res/layout/orders_list_layout.xml
+++ b/app/src/main/res/layout/orders_list_layout.xml
@@ -3,10 +3,19 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="@drawable/bg_fororderlists"
-    android:paddingBottom="10dp"
     >
-         <TextView
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@drawable/bg_fororderlists"
+       android:layout_margin="10dp"
+        android:paddingBottom="10dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        >
+        <TextView
              android:id="@+id/orderIDTag"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
@@ -70,6 +79,7 @@
              app:layout_constraintBottom_toBottomOf="parent"
 
              />
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 
 
