--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="white">#FFFFFFFF</color>
     <color name="gray">#EAE9E9</color>
     <color name="green" >#2c9f1c</color>
+    <color name="red">#C80101</color>
 </resources>
