--- a/app/src/main/res/layout/activity_add_item.xml
+++ b/app/src/main/res/layout/activity_add_item.xml
@@ -105,8 +105,10 @@
         android:text="Cancle"
         android:textSize="20dp"
         android:layout_marginRight="20dp"
+        app:layout_constraintTop_toTopOf="@id/btnSave"
         app:layout_constraintTop_toBottomOf="@id/form_item"
         app:layout_constraintEnd_toStartOf="@id/btnSave"
+
         />
     <Button
         android:id="@+id/btnSave"
@@ -116,6 +118,7 @@
         android:textSize="20dp"
         android:text="Save"
         android:layout_marginRight="20dp"
+        android:layout_marginTop="20dp"
         app:layout_constraintTop_toBottomOf="@id/form_item"
         app:layout_constraintEnd_toEndOf="parent"
         />
