--- a/app/src/main/res/layout/activity_add_item.xml
+++ b/app/src/main/res/layout/activity_add_item.xml
@@ -30,6 +30,8 @@
 
         >
     </TextView>
+
+
     <LinearLayout
         android:id="@+id/form_item"
         android:layout_width="match_parent"
@@ -81,6 +83,30 @@
                 android:background="@drawable/bg_fororderlists"
                 />
         </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:padding="10dp"
+            >
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Enter weight or quantity of item"
+                android:textSize="20dp"
+                android:layout_marginLeft="10dp"
+                />
+            <EditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textSize="20dp"
+                android:background="@drawable/bg_fororderlists"
+                android:padding="10dp"
+                />
+        </LinearLayout>
+
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -145,6 +171,7 @@
         app:layout_constraintTop_toBottomOf="@id/form_item"
         app:layout_constraintEnd_toEndOf="parent"
         />
+
 
 
 
