--- a/app/src/main/res/layout/activity_add_item.xml
+++ b/app/src/main/res/layout/activity_add_item.xml
@@ -59,6 +59,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textSize="20dp"
+                android:text=""
                 android:background="@drawable/bg_fororderlists"
                 android:padding="10dp"
                 />
@@ -81,6 +82,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textSize="20dp"
+                android:text=""
                 android:inputType="number"
                 android:padding="10dp"
                 android:background="@drawable/bg_fororderlists"
@@ -105,6 +107,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textSize="20dp"
+                android:text=""
                 android:inputType="number"
                 android:background="@drawable/bg_fororderlists"
                 android:padding="10dp"
@@ -140,7 +143,6 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:background="@android:color/transparent"
-
                     />
             </com.google.android.material.textfield.TextInputLayout>
 
