--- a/app/src/main/res/layout/activity_add_item.xml
+++ b/app/src/main/res/layout/activity_add_item.xml
@@ -30,13 +30,23 @@
 
         >
     </TextView>
-
-
+<ScrollView
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintTop_toBottomOf="@id/pageTag"
+    >
+<androidx.constraintlayout.widget.ConstraintLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="vertical"
+    >
     <LinearLayout
         android:id="@+id/form_item"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/pageTag"
+        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:orientation="vertical"
@@ -88,7 +98,32 @@
                 android:background="@drawable/bg_fororderlists"
                 />
         </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:padding="10dp"
+            >
 
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Select Category"
+                android:textSize="20dp"
+                android:layout_marginLeft="10dp"
+                />
+                <Spinner
+                    android:id="@+id/categoryField"
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:padding="10dp"
+                    android:layout_weight="1"
+                    android:inputType="none"
+                    android:text="Select Catagory"
+                    android:background="@drawable/bg_fororderlists"
+                    />
+
+        </LinearLayout>
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -113,7 +148,65 @@
                 android:padding="10dp"
                 />
         </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:padding="10dp"
+            >
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Quantity Type"
+                android:textSize="20dp"
+                android:layout_marginLeft="10dp"
+                />
+            <RadioGroup
+                android:id="@+id/QuantityType"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                >
 
+                <RadioButton
+                    android:id="@+id/Kg"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Kg`s"
+                    android:checked="true"
+                    style="@style/radioBtn"
+                    />
+                <RadioButton
+                    android:id="@+id/gram"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="g"
+                    style="@style/radioBtn"
+                    />
+                <RadioButton
+                    android:id="@+id/ml"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="ML"
+                    style="@style/radioBtn"
+                    />
+                <RadioButton
+                    android:id="@+id/Litre"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="L"
+                    style="@style/radioBtn"
+                    />
+                <RadioButton
+                    android:id="@+id/Piece"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Pc"
+                    style="@style/radioBtn"
+                    />
+            </RadioGroup>
+
+        </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -178,8 +271,8 @@
         app:layout_constraintTop_toBottomOf="@id/form_item"
         app:layout_constraintEnd_toEndOf="parent"
         />
-
-
+</androidx.constraintlayout.widget.ConstraintLayout>
+</ScrollView>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
