--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -14,4 +14,8 @@
         <item name="android:textColor">@color/white</item>
         <item name="android:padding">10dp</item>
     </style>
+<!--    radio Button style-->
+    <style name="radioBtn">
+        <item name="android:layout_marginLeft">10dp</item>
+    </style>
 </resources>
