--- a/app/src/main/res/layout/activity_add_item.xml
+++ b/app/src/main/res/layout/activity_add_item.xml
@@ -32,10 +32,13 @@
     </TextView>
 <ScrollView
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="0dp"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintTop_toBottomOf="@id/pageTag"
+    android:layout_marginTop="10dp"
+    android:layout_marginBottom="?attr/actionBarSize"
     >
 <androidx.constraintlayout.widget.ConstraintLayout
     android:layout_width="match_parent"
@@ -112,16 +115,25 @@
                 android:textSize="20dp"
                 android:layout_marginLeft="10dp"
                 />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="horizontal"
+                android:background="@drawable/bg_fororderlists"
+                >
                 <Spinner
                     android:id="@+id/categoryField"
                     android:layout_width="match_parent"
-                    android:layout_height="0dp"
+                    android:layout_height="match_parent"
                     android:padding="10dp"
                     android:layout_weight="1"
                     android:inputType="none"
                     android:text="Select Catagory"
-                    android:background="@drawable/bg_fororderlists"
-                    />
+                    >
+
+                </Spinner>
+
+            </LinearLayout>
 
         </LinearLayout>
         <LinearLayout
