--- a/app/src/main/res/layout/fragment_invoice_fragment.xml
+++ b/app/src/main/res/layout/fragment_invoice_fragment.xml
@@ -11,13 +11,27 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             >
+            <LinearLayout
+                android:id="@+id/inoviceSearchlayout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+
+                >
+                <include layout="@layout/search_bar"
+                    android:id="@+id/invoiceSearchbar"
+                    />
+            </LinearLayout>
 
             <LinearLayout
                 android:id="@+id/Orders_listTAG"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/inoviceSearchlayout"
                 android:orientation="vertical"
                 android:layout_marginStart="20dp"
                 >
