--- a/app/src/main/res/layout/activity_view_item.xml
+++ b/app/src/main/res/layout/activity_view_item.xml
@@ -6,16 +6,160 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ViewItemActivity">
+
     <TextView
-        android:id="@+id/textview"
+        android:id="@+id/tagpagename"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="this page"
+        android:text="View Items"
+        android:textSize="30dp"
+        android:fontFamily="@font/poppins_black"
+        android:textStyle="bold"
+        android:textColor="@color/green"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-
+        android:layout_marginTop="20dp"
         />
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tagpagename"
+        android:padding="10dp"
+        >
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentStart="true"
+            >
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            >
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Item Name:-"
+                android:textSize="20dp"
+                android:fontFamily="@font/poppins_black"
+                android:textStyle="bold"
+                />
+            <TextView
+                android:id="@+id/itemname"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="asdfghtrf"
+                android:layout_marginLeft="5dp"
+
+                />
+        </LinearLayout>
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                >
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="MRP:-"
+                    android:textSize="20dp"
+                    android:fontFamily="@font/poppins_black"
+                    android:textStyle="bold"
+                    />
+                <TextView
+                    android:id="@+id/itemMRP"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="asdfghtrf"
+                    android:layout_marginLeft="5dp"
+                    />
+            </LinearLayout><LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            >
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="item catagory:-"
+                android:textSize="20dp"
+                android:fontFamily="@font/poppins_black"
+                android:textStyle="bold"
+                />
+            <TextView
+                android:id="@+id/itemCatagory"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="asdfghtrf"
+                android:layout_marginLeft="5dp"
+                />
+        </LinearLayout>
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                >
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Item wieght:-"
+                    android:textSize="20dp"
+                    android:fontFamily="@font/poppins_black"
+                    android:textStyle="bold"
+                    />
+                <TextView
+                    android:id="@+id/itemWeight"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="asdfghtrf"
+                    android:layout_marginLeft="5dp"
+                    />
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:gravity="center"
+                >
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Item Quntity availble :-"
+                    android:textSize="20dp"
+                    android:fontFamily="@font/poppins_black"
+                    android:textStyle="bold"
+                    />
+
+                <ImageButton
+                    android:id="@+id/btnminus"
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    android:src="@drawable/icon_remove_substract"
+                    android:background="@android:color/transparent"
+                    android:layout_marginLeft="10dp"
+                    />
+
+                <EditText
+                    android:id="@+id/itemQuntity"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="5dp"
+                    android:text="10"/>
+                <ImageButton
+                    android:id="@+id/btnadd"
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    android:src="@drawable/baseline_add_24"
+                    android:background="@android:color/transparent"
+                    android:layout_marginLeft="10dp"
+                    />
+            </LinearLayout>
+        </LinearLayout>
+
+    </RelativeLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
