update item page ui changes

--- a/app/src/main/res/layout/activity_view_item.xml
+++ b/app/src/main/res/layout/activity_view_item.xml
@@ -6,160 +6,127 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ViewItemActivity">
-
-    <TextView
-        android:id="@+id/tagpagename"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="View Items"
-        android:textSize="30dp"
-        android:fontFamily="@font/poppins_black"
-        android:textStyle="bold"
-        android:textColor="@color/green"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="20dp"
-        />
-
-    <RelativeLayout
+<TextView
+    android:id="@+id/pageupdateTag"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:text="Update Item"
+    android:textSize="30dp"
+    android:textColor="@color/green"
+    android:layout_margin="10dp"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toTopOf="parent"
+    />
+    <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tagpagename"
-        android:padding="10dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/pageupdateTag"
+        android:layout_margin="10dp"
+        app:cardCornerRadius="15dp"
         >
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentStart="true"
-            >
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            >
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Item Name:-"
-                android:textSize="20dp"
-                android:fontFamily="@font/poppins_black"
-                android:textStyle="bold"
-                />
-            <TextView
-                android:id="@+id/itemname"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="asdfghtrf"
-                android:layout_marginLeft="5dp"
+       <RelativeLayout
+           android:layout_width="match_parent"
+           android:layout_height="match_parent"
+           android:padding="10dp"
+           >
+           <TextView
+               android:id="@+id/itemNameTag"
+               android:layout_width="wrap_content"
+               android:layout_height="wrap_content"
+               android:text="Item Name"
+               android:textSize="20dp"
+               android:textColor="@color/black"
+               android:layout_margin="10dp"
+               android:fontFamily="@font/poppins_regular"
+               android:layout_alignParentTop="true"
+               android:layout_alignParentStart="true"
+               />
 
-                />
-        </LinearLayout>
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                >
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="MRP:-"
-                    android:textSize="20dp"
-                    android:fontFamily="@font/poppins_black"
-                    android:textStyle="bold"
-                    />
-                <TextView
-                    android:id="@+id/itemMRP"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="asdfghtrf"
-                    android:layout_marginLeft="5dp"
-                    />
-            </LinearLayout><LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            >
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="item catagory:-"
-                android:textSize="20dp"
-                android:fontFamily="@font/poppins_black"
-                android:textStyle="bold"
-                />
-            <TextView
-                android:id="@+id/itemCatagory"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="asdfghtrf"
-                android:layout_marginLeft="5dp"
-                />
-        </LinearLayout>
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                >
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Item wieght:-"
-                    android:textSize="20dp"
-                    android:fontFamily="@font/poppins_black"
-                    android:textStyle="bold"
-                    />
-                <TextView
-                    android:id="@+id/itemWeight"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="asdfghtrf"
-                    android:layout_marginLeft="5dp"
-                    />
-            </LinearLayout>
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:gravity="center"
-                >
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Item Quntity availble :-"
-                    android:textSize="20dp"
-                    android:fontFamily="@font/poppins_black"
-                    android:textStyle="bold"
-                    />
+           <TextView
+               android:id="@+id/itemName"
+               android:layout_width="200dp"
+               android:layout_height="wrap_content"
+               android:layout_below="@id/itemNameTag"
+               android:layout_alignLeft="@id/itemNameTag"
+               android:layout_marginLeft="10dp"
+               android:fontFamily="@font/poppins_regular"
+               android:text="frooty"
+               android:textSize="15sp"
+               />
+           <TextView
+               android:id="@+id/itemMRPTag"
+               android:layout_width="wrap_content"
+               android:layout_height="wrap_content"
+               android:layout_alignParentEnd="true"
+               android:layout_alignParentTop="true"
+               android:text="Item Price"
+               android:textSize="20dp"
+               android:textColor="@color/black"
+               android:layout_margin="10dp"
+               android:fontFamily="@font/poppins_regular"
+               />
+           <TextView
+               android:id="@+id/itemMRP"
+               android:layout_width="wrap_content"
+               android:layout_height="wrap_content"
+               android:layout_below="@id/itemMRPTag"
+               android:layout_alignRight="@id/itemMRPTag"
+               android:layout_marginLeft="10dp"
+               android:fontFamily="@font/poppins_regular"
+               android:text="500 Rs."
+               android:textSize="15sp"
+               />
 
-                <ImageButton
-                    android:id="@+id/btnminus"
-                    android:layout_width="30dp"
-                    android:layout_height="30dp"
-                    android:src="@drawable/icon_remove_substract"
-                    android:background="@android:color/transparent"
-                    android:layout_marginLeft="10dp"
-                    />
+           <TextView
+               android:id="@+id/QunatityTag"
+               android:layout_width="wrap_content"
+               android:layout_height="wrap_content"
+               android:text="item Quantity Availble"
+               android:layout_below="@id/itemName"
+               android:layout_alignStart="@id/itemNameTag"
+               android:textSize="20dp"
+               android:layout_marginTop="5dp"
+               android:textColor="@color/black"
+               android:fontFamily="@font/poppins_regular"
+               />
+           <TextView
+               android:id="@+id/Qunatity"
+               android:layout_width="wrap_content"
+               android:layout_height="wrap_content"
+               android:layout_below="@id/QunatityTag"
+               android:layout_alignStart="@id/itemName"
+               android:text="10"
+               android:textSize="15sp"
+               android:fontFamily="@font/poppins_regular"
 
-                <EditText
-                    android:id="@+id/itemQuntity"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="5dp"
-                    android:text="10"/>
-                <ImageButton
-                    android:id="@+id/btnadd"
-                    android:layout_width="30dp"
-                    android:layout_height="30dp"
-                    android:src="@drawable/baseline_add_24"
-                    android:background="@android:color/transparent"
-                    android:layout_marginLeft="10dp"
-                    />
-            </LinearLayout>
-        </LinearLayout>
+               />
 
-    </RelativeLayout>
+           <TextView
+               android:id="@+id/DiscountedRateTag"
+               android:layout_width="wrap_content"
+               android:layout_height="wrap_content"
+               android:text="Discounted Rate"
+               android:layout_below="@id/Qunatity"
+               android:layout_alignStart="@id/QunatityTag"
+               android:textSize="20dp"
+               android:textColor="@color/black"
+               android:fontFamily="@font/poppins_regular"
+               />
+           <TextView
+               android:id="@+id/DiscountedRate"
+               android:layout_width="wrap_content"
+               android:layout_height="wrap_content"
+               android:layout_below="@id/DiscountedRateTag"
+               android:layout_alignStart="@id/Qunatity"
+               android:text="5%"
+               android:textSize="15sp"
+               android:fontFamily="@font/poppins_regular"
+               />
+
+       </RelativeLayout>
+    </androidx.cardview.widget.CardView>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
